--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -18,44 +18,47 @@
           </nav>
         </header>
         <main>
-          <!-- Enter Secret -->
-          <!-- <h1>SwipeSecret</h1>
-          <h2>Enter your secret to start finding matches</h2>
-          <form class="secret" action="index.html" method="post">
-            <input name="secret" placeholder="" autofocus>
-            <button type="submit">Next</button>
-          </form> -->
-
-          <!-- Enter email/password -->
-          <!-- <h1>SwipeSecret</h1>
-          <h2>Setup your account with email and password</h2>
-          <form class="createUser" action="index.html" method="post">
-            <input name="email" placeholder="Enter your email address">
-            <input name="password" type="password" placeholder="Enter your password">
-            <input name="confirm" type="password" placeholder="Confirm your password">
-            <button type="submit">Next</button>
-          </form> -->
-
-          <!-- Enter your criteria -->
           <h1>SwipeSecret</h1>
-          <h2>Populate your account with match criteria</h2>
-          <form class="createUser" action="index.html" method="post">
-            <input name="phoneNum" placeholder="Enter your phone number (ie. 555-123-4567)">
-            <input name="location" placeholder="Enter your current city and state (ie. Portland, OR)">
-            <input name="gender" placeholder="Enter your gender (ie. Female)">
-            <input name="orientation" placeholder="Enter your orientation (ie. Gay)">
-            <input name="interestedIn" placeholder="Enter gender(s) you are interested in (ie. Female)">
-            <button type="submit">Next</button>
+
+          <form class="signUp" action="index.html" method="post">
+            <div class="stepOne">
+              <h2>Enter your secret to start finding matches</h2>
+              <input name="secret" placeholder="" autofocus>
+              <button type="XYZ">Next</button>
+            </div>
+
+            <!-- <div class="stepTwo">
+              <h2>Setup your account with email and password</h2>
+              <input name="email" placeholder="Enter your email address">
+              <input name="password" type="password" placeholder="Enter your password">
+              <input name="confirm" type="password" placeholder="Confirm your password">
+              <button type="XYZ">Next</button>
+            </div> -->
+
+            <!-- <div class="stepThree">
+              <h2>Populate your account with match criteria</h2>
+              <input name="phoneNum" placeholder="Enter your phone number (ie. 555-123-4567)">
+              <input name="location" placeholder="Enter your current city and state (ie. Portland, OR)">
+              <input name="gender" placeholder="Enter your gender (ie. Female)">
+              <input name="orientation" placeholder="Enter your orientation (ie. Gay)">
+              <input name="interestedIn" placeholder="Enter gender(s) you are interested in (ie. Female)">
+              <button type="submit">Next</button>
+            </div> -->
           </form>
+
           <div class="scroll">
-            <h6>Scroll</h6>
+            <h6>scroll down for more information</h6>
           </div>
         </main>
       </div>
     </div>
-    <div class="fullbleed quarter" id="secondary">
-      <div class="overlay quarter">
-
+    <div class="fullbleed custom" id="secondary">
+      <div class="overlay custom">
+        <main class="custom">
+          <h3>SwipeSecret is the illegitimate love child of PostSecret and Tinder. </h3>
+          <p>The reason we're asking for your information, telephone number included, is so that once you match with someone and confirm that you'd like to provide them with your contact information, you can coordinate your own communications and meetings via phone or email without having to worry that we'll lock down or make you pay to send messages, because that'd be lame. On top of not being money-grubbing jerks, we pinkie swear that we won't misuse your information or share it with anyone else.</p>
+          <h6>-The Swipe Secret Crew</h6>
+        </main>
       </div>
     </div>
   </body>
