bunch of TODO tags in appropriate places.

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
           <form class="signUp" id="signUpForm">
             <!-- action="index.html" method="post" -->
+            <!-- TODO: This form doesn't actually have a place for a first and last name? Have we discarded that? I feel like we should at least have first names. -->
             <div class="stepOne">
               <h2>Enter your secret to start finding matches</h2>
               <input name="secret" placeholder="" autofocus>
