--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <!-- TODO: This form doesn't actually have a place for a first and last name? Have we discarded that? I feel like we should at least have first names. -->
             <div class="stepOne">
               <h2>Enter your secret to start finding matches</h2>
+              <!-- TODO: At the moment, the secret blank holds about 65 characters before looking crowded. Could we get it up to the length of a tweet? -->
               <input name="secret" placeholder="" autofocus>
               <button id="stepOneButton" type="XYZ">Next</button>
             </div>
