added the missing first name field to signup process

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
 
               <div class="stepThree">
                 <h2>Populate your account with match criteria</h2>
+                <input name="firstName" placeholder="Enter your first name (ie. Sarah)">
                 <input name="phoneNum" placeholder="Enter your phone number (ie. 555-123-4567)">
                 <input name="location" placeholder="Enter your current city and state (ie. Portland, OR)">
                 <input name="gender" placeholder="Enter your gender (ie. Female)">
