got voting working, verified mutuality system, added persistent login (Charles/Danielle

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <div class="votes">
         <button id="approve">Approve</button>
         <button id="reject">Reject</button>
+        <button id="report">Report</button>
+        <script type="text/javascript"> assignVoteClickHandlers(); </script>
       </div>
     </script>
     <!-- template for confirm view, shows secret, gender, orientation, interestedIn, and location -->
@@ -114,6 +116,7 @@
 
           <div class="swipe">
             <h1>Get Swiping</h1>
+              <div id="currentSecret"></div>
             <!-- secret template will insert a secret text here -->
           </div>
 
